--- a/자료구조/data_structure/1158요세푸스/1158요세푸스.vcxproj
+++ b/자료구조/data_structure/1158요세푸스/1158요세푸스.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{2d147792-56c4-4864-9f25-621ae950afd1}</ProjectGuid>
-    <RootNamespace>My9935문자열폭발</RootNamespace>
+    <ProjectGuid>{5da1c59c-fb6e-4ebe-9d82-ff3c093a6d01}</ProjectGuid>
+    <RootNamespace>My1158요세푸스</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>구조2_9935문자열폭발</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="9935문자열폭발.cpp" />
+    <ClCompile Include="1158요세푸스.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
