--- a/자료구조/data_structure/3111Beakjoon/3111Beakjoon.vcxproj
+++ b/자료구조/data_structure/3111Beakjoon/3111Beakjoon.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{8ec3b313-3807-41f7-a2f6-8e975ff30c4c}</ProjectGuid>
     <RootNamespace>My3111Beakjoon</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>3111Beakjoon검열_</ProjectName>
+    <ProjectName>구조2_3111Beakjoon검열_</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
