--- a/문자열알고리즘/5052전화번호목록/5052전화번호목록.vcxproj
+++ b/문자열알고리즘/5052전화번호목록/5052전화번호목록.vcxproj
@@ -21,10 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{7ec64d3f-6604-4395-b5a1-a8449f703cf6}</ProjectGuid>
-    <RootNamespace>My1786찾기</RootNamespace>
+    <ProjectGuid>{d65d233b-f192-452e-9988-c5e88778d492}</ProjectGuid>
+    <RootNamespace>My5052전화번호목록</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>1786찾기kmp</ProjectName>
+    <ProjectName>5052전화번호목록Trie</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,7 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="1786찾기.cpp" />
+    <ClCompile Include="5052전화번호목록.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
