--- a/문자열알고리즘/9202Boggle/9202Boggle.vcxproj
+++ b/문자열알고리즘/9202Boggle/9202Boggle.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,10 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{7ec64d3f-6604-4395-b5a1-a8449f703cf6}</ProjectGuid>
-    <RootNamespace>My1786찾기</RootNamespace>
+    <ProjectGuid>{557a2d20-1d51-46c1-98d7-213f958e2b7a}</ProjectGuid>
+    <RootNamespace>My9202Boggle</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>1786찾기kmp</ProjectName>
+    <ProjectName>9202BoggleTrie</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,7 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="1786찾기.cpp" />
+    <ClCompile Include="9202Boggle.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
