--- a/문자열알고리즘/9250문자열집합판별/9250문자열집합판별.vcxproj
+++ b/문자열알고리즘/9250문자열집합판별/9250문자열집합판별.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{7ec64d3f-6604-4395-b5a1-a8449f703cf6}</ProjectGuid>
-    <RootNamespace>My1786찾기</RootNamespace>
+    <ProjectGuid>{59b16f58-cc6a-486e-b731-4d43ea5666b8}</ProjectGuid>
+    <RootNamespace>My9250문자열집합판별</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>1786찾기kmp</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="1786찾기.cpp" />
+    <ClCompile Include="9250문자열집합판별.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
