--- a/다이나믹/다이나믹/11726_2xn타일링/11726_2xn타일링.vcxproj
+++ b/다이나믹/다이나믹/11726_2xn타일링/11726_2xn타일링.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{607ab996-5014-4da1-bbc9-0d909c88a605}</ProjectGuid>
-    <RootNamespace>다이나믹</RootNamespace>
+    <ProjectGuid>{b6752114-3ba4-4e77-bca3-17ba31a3edd6}</ProjectGuid>
+    <RootNamespace>My117262xn타일링</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,17 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DefaultClass.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
-    <ClCompile Include="다이나믹.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="DefaultClass.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
+    <ClCompile Include="11726_2xn타일링.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
