--- a/다이나믹/다이나믹/17626FourSquares/17626FourSquares.vcxproj
+++ b/다이나믹/다이나믹/17626FourSquares/17626FourSquares.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{607ab996-5014-4da1-bbc9-0d909c88a605}</ProjectGuid>
-    <RootNamespace>다이나믹</RootNamespace>
+    <ProjectGuid>{2ae3a39c-289a-4b4d-89cf-b04b319fb3b9}</ProjectGuid>
+    <RootNamespace>My17626FourSquares</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,17 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DefaultClass.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
-    <ClCompile Include="다이나믹.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="DefaultClass.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
+    <ClCompile Include="17626FourSquares.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
