--- a/다이나믹/다이나믹/9465스티커/9465스티커.vcxproj
+++ b/다이나믹/다이나믹/9465스티커/9465스티커.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{607ab996-5014-4da1-bbc9-0d909c88a605}</ProjectGuid>
-    <RootNamespace>다이나믹</RootNamespace>
+    <ProjectGuid>{57111aca-51fb-47ab-b4da-22d08fe52495}</ProjectGuid>
+    <RootNamespace>My9465스티커</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,17 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DefaultClass.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
-    <ClCompile Include="다이나믹.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="DefaultClass.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
+    <ClCompile Include="9465스티커.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
