--- a/프로그래머스_10_04시작/programmers가장먼노드/programmers가장먼노드.vcxproj
+++ b/프로그래머스_10_04시작/programmers가장먼노드/programmers가장먼노드.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{11502f97-3ddd-4abb-8605-0d7faabd13fe}</ProjectGuid>
-    <RootNamespace>programmerscokrlearncourses30lessons12971</RootNamespace>
+    <ProjectGuid>{ef1ad60b-7479-4b1a-b6dd-a45dd984baec}</ProjectGuid>
+    <RootNamespace>programmers가장먼노드</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="programmers.co.kr_learn_courses_30_lessons_12971.cpp" />
+    <ClCompile Include="programmers가장먼노드.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
